# icon-viewer

./: Makefile  awesome.json  bun.lockb  codicon.json  descriptions-workaround.json  descriptions.json  fluent.json  index.html  material.json  notoemoji.json  package.json  phosphor.json  pyproject.toml  remix.json  tsconfig.json  typicons.json  update.py  weather.json
fonts/: awesome.json  codicon.json  fluent.json  material.json  phosphor.json  remix.json  tabler.json
icon_provider/: __main__.py  fetch.py  store.py  sweep_select.py  ufont.py
src/: iter.test.ts  iter.ts  main.js.map  main.ts  ufont.ts
static/: style.css
